2008-04-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Remove code for calculating the glyph cache size.

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface): Remove unused symbol.

2008-04-25  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Sam Weinig.

        Add some content to an empty ICU header file to prevent verification errors.

        * icu/unicode/utf_old.h:

2008-04-24  John Sullivan  <sullivan@apple.com>

        Reviewed by Jess
        
        - fixed <rdar://problem/5886655> JavaScript input panel automatic resizing doesn't work right with HiDPI

        * Misc/WebNSControlExtras.m:
        (-[NSControl sizeToFitAndAdjustWindowHeight]):
        deploy userSpaceScaleFactor when using view distances on the window

2008-04-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        Add NPN_Construct and NPN_PluginThreadAsyncCall declarations.
        
        * Plugins/npfunctions.h:

2008-04-20  Matt Lilek  <webkit@mattlilek.com>

        Mysteriously reviewed by mitz|away.

        Bug 18111: Closing a tab while dragging crashes Safari
        https://bugs.webkit.org/show_bug.cgi?id=18111

        Null check the page before handling drag events.

        * WebView/WebView.mm:
        (-[WebView draggingUpdated:]):
        (-[WebView draggingExited:]):

2008-04-19  Brady Eidson  <beidson@apple.com>

        Reviewed by Tim Hatcher

        Add a WebPreference for the path of the local storage persistent store.

        * WebView/WebPreferenceKeysPrivate.h:

        * WebView/WebPreferences.m:
        (-[WebPreferences _localStorageDatabasePath]):
        (-[WebPreferences _setLocalStorageDatabasePath:]):
        * WebView/WebPreferencesPrivate.h:

        * WebView/WebView.mm:
        (-[WebView _preferencesChangedNotification:]):

2008-04-18  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig
