@@ -39,6 +39,7 @@ _WebActionNavigationTypeKey
 _WebActionOriginalURLKey
 _WebArchivePboardType
 _WebConvertNSImageToCGImageRef
+_WebCoreScrollbarAlwaysOn
 _WebDatabaseDidModifyDatabaseNotification
 _WebDatabaseDidModifyOriginNotification
 _WebDatabaseDirectoryDefaultsKey
